library/database_universe/test/errors/class/mixin.dart
// only classes

import 'package:database_universe/database_universe.dart';

// ignore: invalid_annotation_target
@collection
mixin Test {}
